# kisanone-backend

./: .gitignore  main.py  pyproject.toml
app/: main.py
app/core/: auth.py  config.py
app/models/: crop_report.py
app/routers/: crop_doctor.py  users.py
app/services/: aiservice.py
